# arbor-via

./: Cargo.toml  Dockerfile  LICENSE  README.md
frogolio/: .gitignore  CHANGELOG.md  README.md
frogolio/migrations/: 202508080003_add_indexes.sql  202508080004_add_frogol_avatar_images.sql
frogolio/src/: errors.rs  main.rs
frogolio/src/handler/: image_handler.rs  mod.rs
frogolio/src/middleware/: compression.rs
frogolio/src/models/: mod.rs
frogolio/src/repo/: click_repo.rs  lead_repo.rs  mod.rs
frogolio/src/routes/: avatar.rs  frogol.rs  lead.rs
frogolio/src/services/: avatar_service.rs  lead_service.rs  mod.rs
frogolio/static/css/: themes.css
frogolio/templates/: frogol.html
frogolio/templates/dashboard/: analytics.html  create_frogol.html  edit_frogol.html  index.html  settings.html
frogolio/templates/partials/: lead-capture-success.html  link.html  links.html
migrations/: 202508070001_initial_schema.sql  202508070002_add_theme_to_frogols.sql  202508070004_add_users_auth.sql  202508070005_add_message_to_leads.sql  202508080001_add_profile_to_frogols.sql  202508080002_link_visibility_and_kind.sql
src/: state.rs
src/middleware/: csrf.rs  mod.rs
src/models/: avatar_image.rs
src/repo/: frogol_repo.rs  link_repo.rs  user_repo.rs
src/routes/: auth.rs  dashboard.rs  mod.rs
src/services/: auth_service.rs  frogol_service.rs
templates/: base.html
templates/auth/: login.html  register.html
templates/dashboard/: frogol.html
templates/dashboard/partials/: link.html  (+1 more)
templates/partials/: edit-link-form.html  lead-capture-error.html
(+2 files in other folders)
