[package]
name = "frogolio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
askama = "0.12"
askama_axum = "0.4"
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "uuid"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "limit", "compression-full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.12"
serde_urlencoded = "0.7"
urlencoding = "2.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
bcrypt = "0.15"
jsonwebtoken = "9"
dotenvy = "0.15"
time = "0.3"
axum_typed_multipart = "0.6"
infer = "0.15"
tempfile = "3.8"
futures = "0.3"
